* temp fix: scrollbar

--- a/css/scroller.css
+++ b/css/scroller.css
@@ -108,6 +108,7 @@
 .absol-scrollbar {
     position: relative;
     background-color: rgba(180, 180, 182, 0.1);
+    overflow: hidden;
 }
 
 .absol-scrollbar-button {
